# OOP_labi

./: CMakeLists.txt  count_bin.cpp  main.cpp
oop_lab_1/: CMakeLists.txt  count_bin.cpp  count_bin.h  test_count_bin.cpp
